# mina-on-chain-voting

./: .dockerignore  .env.example  .envrc  .eslintignore  .eslintrc.js  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.server  Dockerfile.web  Justfile  License-MPL2.rtf  README.md  Rakefile  build  clean_archive_dumps.hs  diesel.toml  docker-compose.yaml  download_archive_dump.hs  download_database_dump.py  flake.nix  fly.toml  init_test_database.hs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  postgres.nix  runTempDatabase.hs
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
Lib/: ArchiveDumpKeyParser.hs  Fetchers.hs
Tools/: cleanArchiveDumps.hs  downloadArchiveDump.hs  runTempDatabase.hs
api/: .env  .gitignore  Cargo.toml  flake.nix  result  shell.nix
api/.pg/: current_logfiles  postmaster.opts
api/.pg/base/1/: 2608  2662  2681  2696  2753_vm  3079_vm  3541_vm  3609  3766
api/.pg/base/13769/: 1247_vm  1259  13593_vm  13597  13598  2601_vm  2606  2607_vm  2609_vm  2615_vm  2616_vm  2664  2673  2674  2675  2678  2685  2692  3080  3456_vm  3604
api/.pg/base/13770/: 1249_vm  1259  13592  13603  2605_vm  2609  2610_vm  2619  2619_vm  2665  2684  2690  2837  2838  3456_fsm  3601_vm  3764  pg_internal.init
api/.pg/global/: 1213_vm  1214  1260_vm  1261_vm  1262  1262_vm  2671  2672  2694  2695  pg_control  pg_internal.init
api/.pg/pg_stat/: db_0.stat  db_13770.stat  global.stat
api/src/: database.rs  error.rs  handlers.rs  lib.rs  main.rs
api/src/db/: mod.rs  queries.rs
api/src/routes/: keyword.rs  mod.rs  votes.rs
api/tests/: mod.rs
app/: bun.lockb  dummy.ts  dummy.tsx  jest.config.js  package-lock.json  package.json  setupProxy.tsx  tsconfig.json  tsconfig.test.json
backend/: package-lock.json  package.json
backend_latest/: dbscript.sql  index.js  package.json
client/: .eslintignore  .eslintrc  .gitignore  README.md  bun.lockb  express.js  flake.nix  jest.config.ts  ocs-client.nix  package-lock.json  package.json  postcss.config.js  result  setupTests.js  shell.nix  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  yarn.nix
contrib/: explorer_query.graphql
cron/: .env.example  Cargo.toml
cron/src/: main.rs
docs/: DEVELOPER.md  ObservationRoutine.md  installation_notes.txt  notes.txt  testnode.txt
frontend/: README.md  package-lock.json  (+2 more)
graphql/: Cargo.toml
graphql/contrib/: explorer_query.graphql
graphql/src/: consts.rs  graphql.rs  lib.rs  main.rs  main.rs.save  processing.rs  scheduler.rs  tests.rs  wasm_tests.rs
scheduler/: .gitignore  Cargo.toml  flake.nix  logfile  onChainSignalling.service  postgres.nix  result
scheduler/.pg/: current_logfiles  postgresql.conf  postmaster.pid
scheduler/.pg/base/1/: 1247  1259_vm  2579  2603_vm  2618_vm  2682  2703  2704  2836  2838_vm  2840  2840_vm  2841  3085  3395  3600  3608  3764_vm
scheduler/.pg/base/13769/: 1249  1255  13588  13598_vm  13603_vm  13607  2606_vm  2658  2659  2663  2666  2667  2691  2693  2836_vm  3394  3394_vm  3456  3602  3603  3603_vm  3605  3712
scheduler/.pg/base/13770/: 1255_vm  13588_vm  13593  13602  2600_vm  2602_vm  2608_vm  2610  2612  2612_vm  2615  2617_vm  2618  2619_fsm  2679  2839  3079  3081  3164  3455  3600_vm  3602_vm  3767  pg_internal.init
scheduler/.pg/global/: 1214_vm  1232  1233  1260  1261  2396  2396_vm  2397  pg_control  pg_internal.init
scheduler/.pg/pg_stat_tmp/: db_0.stat  db_13770.stat  global.stat
scheduler/examples/: poc-3.rs  simple.rs
scheduler/src/: database.rs  error.rs  handlers.rs  lib.rs  main.rs
scheduler/test_db/: flake.nix  postgresql.auto.conf
server/: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  DEVELOPER.md  Dockerfile  Makefile.toml  README.md  default.nix  diesel.toml  flake.nix  log4rs.yml  ocs-server.nix  onChainSignalling.service  shell.nix  sqlx-data.json  start
server/migrations/2023-02-14-193708_initial_schema/: down.sql  up.sql
server/migrations/2023-03-02-195824_change-mina-proposal-to-use-time/: down.sql  up.sql
server/migrations/2023-03-29-143004_add_proposal_version/: down.sql  up.sql
server/migrations/2023-04-09-230450_add_proposal_metadata/: down.sql  up.sql
server/migrations/2023-04-11-114332_add_mips_3_and_4/: down.sql  up.sql
server/migrations/2023-04-20-141939_correct-mip3-mip4-start-and-end-date/: down.sql  up.sql
server/migrations/2023-04-24-165634_update-mip3-mip4/: down.sql  up.sql
server/migrations/2023-05-18-212032_final-mip3-mip4-dates/: down.sql  up.sql
server/migrations/2023-08-20-211633_add_initial_schema/: down.sql  up.sql
server/src/: config.rs  constants.rs  error.rs  ledger.rs  lib.rs  main.rs  prelude.rs  processor.rs  queries.rs  schema.rs  signal.rs  transaction_query.graphql  types.rs  utils.rs
server/src/chain/: ledger.rs
server/src/database/: archive.rs  block_query.graphql  block_schema.graphql  cache.rs  mock.rs  mock_txs.json  mod.rs  postgres.rs  transaction_query.graphql  transaction_schema.graphql
server/src/db/: cache.rs  conn.rs  mod.rs  queries.rs
server/src/http/: keyword.rs  mod.rs
server/src/ledger/: mod.rs  stream.rs
server/src/mina/: ledger.rs  mod.rs  vote.rs
server/src/models/: diesel.rs  ledger.rs  mod.rs  tests.rs  vote.rs
server/src/queries/: mod.rs
server/src/router/: keyword.rs  mod.rs  processor.rs  proposal.rs
server/src/router/api/: keyword.rs  mod.rs
server/src/routes/: info.rs  keyword.rs  mod.rs  processor.rs  proposal.rs  router.rs
server/tests/: api_context_integration.rs  ledger_integration.rs  mod.rs  router_integration.rs
server/tests/__mocks__/: delegated_account.json  undelegated_account.json
(+1821 files in other folders)
