[package]
name = "on_chain_signalling-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
log4rs = "1.1.1"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.80"
cfg = "0.5.0"
base58check = "0.1.0"
dotenv = "0.15.0"

tokio = { version = "1.19.2", features = ["full"] }
tokio-postgres = "0.7.6"
postgres-derive = "0.4.2"
postgres = "0.19.3"
postgres-types = { version = "0.2.3", features = ["derive"] }