[package]
name = "cron"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tokio-postgres = "0.7.7"

clap = { version = "3.0.0-beta.5", features = ["derive", "env"] }

env_logger = "0.9.0"
reqwest = "0.11.12"
tempfile = "3.3.0"
chrono = "0.4.22"
dotenv = "0.15.0"
flate2 = "1.0.24"
anyhow = "1.0"
tar = "0.4.38"
log = "0.4.17"