[package]
name = "mina-graphql-rs"
version = "0.1.0"
edition = "2018"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.74"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
async-std =  "1.9"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio-test = "0.4"

[dependencies]
anyhow = "1.0.39"
graphql_client = "0.9.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
log = "0.4"
rust_decimal = "1.14"
rust_decimal_macros = "1.14"
chrono = { version = "0.4", features = [ "serde" ] }