[package]
name = "tokio-cron-async"
version = "0.1.0"
authors = ["Eduard Kyvenko <eduard.kyvenko@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
tokio-util = { version = "0.7.3", features = [ "time" ] }
cron = "0.11.0"
chrono = "0.4"
uuid = { version = "1.1.2", features = ["v4"] }