[package]
name = "mina-governance-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
axum = { version = "0.6.4", features = ["tower-log"] }
clap = { version = "4.1.4", features = ["derive", "env"] }
moka = { version = "0.10.0", features = ["future"] }
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "offline", "macros"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utility dependencies
base58check = "0.1.0"
bytes = "1.4.0"
dotenv = "0.15.0"
futures = "0.3"
futures-util = "0.3"
itertools = "0.10.5"
rust_decimal = "1.28.0"

