[package]
name = "mina-governance-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
# Core dependencies
axum = { version = "0.6.4", features = ["tower-log"] }
bs58 = {version = "0.4.0", features = ["check"]}
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
clap = { version = "4.1.4", features = ["derive", "env"] }
moka = { version = "0.10.0", features = ["future"] }
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typeshare = "1.0.0"

# Utility dependencies
bytes = "1.4.0"
dotenvy = "0.15.6"
futures = "0.3"
futures-util = "0.3"
itertools = "0.10.5"
rust_decimal = "1.28.0"
r2d2 = "0.8.10"

