[package]
name = "mina-ocv-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
axum = { version = "0.6.4", features = ["tower-log"] }
bs58 = {version = "0.4.0", features = ["check"]}
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "numeric"] }
diesel-derive-enum = { version = "2.0.0", features = ["postgres"] }
clap = { version = "4.1.4", features = ["derive", "env"] }
moka = { version = "0.12.0", features = ["future"] }
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utility dependencies
anyhow = "1.0.69"
bytes = "1.4.0"
futures-util = "0.3"
rust_decimal = "1.28.0"
r2d2 = "0.8.10"
